# gitmortem

./: .gitignore  README.md  install.ps1  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
docs/: app.js  index.html  styles.css
examples/: sample-postmortem.md
gitmortem/: __init__.py  __main__.py  blast_radius.py  cli.py  config.py  diff_parser.py  git_analyzer.py  llm.py  renderer.py  timeline.py
tests/: test_blast_radius.py  test_cli.py  test_diff_parser.py  test_git_analyzer.py
tests/fixtures/: README.md
